Adjust workflow permissions

--- a/.github/workflows/jest_test.yaml
+++ b/.github/workflows/jest_test.yaml
@@ -9,12 +9,17 @@ on:
         branches:
             - main
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 jobs:
-  run_tests:
+  jest-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: actions/setup-node@v3
       with:
         node-version: 18
